--- a/views/pages/question1.ejs
+++ b/views/pages/question1.ejs
@@ -13,7 +13,7 @@
       <%- include('../partials/questions/1') %>
       <div class="box answer">
         <h3>Answer</h3>
-        <!-- render answer here -->
+        <p>Not all those who wander are lost</p>
       </div>
     </div>
   </div>
