--- a/views/pages/question3.ejs
+++ b/views/pages/question3.ejs
@@ -13,7 +13,7 @@
       <%- include('../partials/questions/3') %>
       <div class="box answer">
         <h3>Answer</h3>
-        <!-- render answer here -->
+        <p><%- homer %></p>
       </div>
     </div>
   </div>
