--- a/views/pages/question4.ejs
+++ b/views/pages/question4.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>Node: Workshop 2</title>
-  <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="stylesheet" href="../css/styles.css" />
 </head>
 <body>
   <header>
@@ -13,8 +13,9 @@
       <%- include('../partials/questions/4') %>
       <div class="box answer">
         <h3>Answer</h3>
-        <!-- render answer here -->
+        <%- names %>
       </div>
     </div>
   </div>
 </body>
+
