--- a/views/pages/question5.ejs
+++ b/views/pages/question5.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>Node: Workshop 2</title>
-  <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="stylesheet" href="../css/styles.css" />
 </head>
 <body>
   <header>
@@ -13,7 +13,11 @@
       <%- include('../partials/questions/5') %>
       <div class="box answer">
         <h3>Answer</h3>
-        <!-- render answer here -->
+        <ol>
+          <% popularGirlNames.forEach((name, index) => { %>
+          <li><%= ++index %>. <%= name %></li>
+          <% }) %>
+        </ol>
       </div>
     </div>
   </div>
