--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,9 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono|Roboto+Slab:300&display=swap");
-/* @import "css-reset.css"; */
+@import "css-reset.css";
 @import "typography.css";
 
 body {
-  background: red;
+  background: white;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
