--- a/views/pages/homepage.ejs
+++ b/views/pages/homepage.ejs
@@ -5,16 +5,14 @@
 </head>
 <body>
   <header>
-    <h1>Node: Workshop 2</h1>
+    <h1>Home</h1>
   </header>
   <div class="main">
-    <h2>Part 2</h2>
+    <h2>Question 9</h2>
     <div class="content">
-      <%- include('../partials/questions/8') %>
       <div class="box answer">
-        <h3>Answer</h3>
-        <%- include('../partials/questions/buttons') %>
-        <p>No answer required here...</p>
+        <h3>Reference Links</h3>
+        <%- include('../partials/questions/allQuestions') %>
       </div>
     </div>
   </div>
