--- a/views/partials/questions/allQuestions.ejs
+++ b/views/partials/questions/allQuestions.ejs
@@ -1,10 +1,14 @@
-<a href="http://localhost:4000/question1" class="Question 1">&laquo; Question 1</a>
-<a href="http://localhost:4000/question2" class="Question 2">Question 2 &raquo;</a>
-<a href="http://localhost:4000/question3" class="Question 3">&laquo; Question 3</a>
-<a href="http://localhost:4000/question4" class="Question 4">Question 4 &raquo;</a>
-<a href="http://localhost:4000/question5" class="Question 5">&laquo; Question 5</a>
-<a href="http://localhost:4000/question6" class="Question 6">Question 6 &raquo;</a>
-<a href="http://localhost:4000/question7" class="Question 7">&laquo; Question 7</a>
-<a href="http://localhost:4000/question8" class="Question 8">Question 8 &raquo;</a>
-<a href="http://localhost:4000/question9" class="Question 9">&laquo; Question 9</a>
-<a href="http://localhost:4000/question10" class="Question 10">Question 10 &raquo;</a>
+<h3>Directory</h3>
+<ul>
+<li><a href="http://localhost:4000/question1" class="Question 1">Question 1</a></li>
+<li><a href="http://localhost:4000/question2" class="Question 2">Question 2</a></li>
+<li><a href="http://localhost:4000/question3" class="Question 3">Question 3</a></li>
+<li><a href="http://localhost:4000/question4" class="Question 4">Question 4</a></li>
+<li><a href="http://localhost:4000/question5" class="Question 5">Question 5</a></li>
+<li><a href="http://localhost:4000/question6" class="Question 6">Question 6</a></li>
+<li><a href="http://localhost:4000/question7" class="Question 7">Question 7</a></li>
+<li><a href="http://localhost:4000/question8" class="Question 8">Question 8</a></li>
+<li><a href="http://localhost:4000/question9" class="Question 9">Question 9</a></li>
+<li><a href="http://localhost:4000/question10" class="Question 10">Question 10</a></li>
+</ul>
+
